Fixed CSS flex wrap

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ ul {
 .vertical-align {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 img {
